@@ -6,6 +6,6 @@ command.output_directory = this_directory
 command.output_name = 'keepingtables'
 command.actually_compile_code = true
 command.actually_run_tests = true
-command.named_references_that_can_be_set_at_runtime = ['Table1'] 
+command.named_references_that_can_be_set_at_runtime = ['Table1', 'named_reference_to_table'] 
 command.named_references_to_keep = :all # ['Total']
 command.go!
