@@ -1,5 +1,7 @@
 # Head
 
+- Copes when named references contain table references
+
 # 0.3.3 - 2014 October 7th
 
 - Ruby version of FIND function now works when arguments are not strings
